NOTICK: Updated release notes for 4.3
Updated release notes for 4.3